--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,13 @@ a {
   color: unset;
   text-decoration: none;
 }
+
+.content {
+  height: 100vh;
+  display: flex;
+}
+
+.side {
+  height: 100%;
+  border-right: 2px solid var(--color-line);
+}
