--- a/src/App.css
+++ b/src/App.css
@@ -25,3 +25,13 @@ a {
   height: 100%;
   border-right: 2px solid var(--color-line);
 }
+
+.main-content {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.about {
+  display: none;
+}
